Use generated Event Model
